# taifx-volatility

./: .env.example  .gitignore  CLAUDE.md  pyproject.toml  zbpack.json
.github/workflows/: cron-refresh.yml
docs/: 2-台指平均震幅.xlsx
docs/plans/: 2026-05-21_b5-product-display.md
memory/daily/: 2026-05-19.md  2026-05-20.md  2026-05-21.md
src/: compute.py  config.py  db.py  exceptions.py  fetch.py  freshness.py  main.py  render.py  verify.py  verify_sources.py
templates/: index.html.j2
tests/: test_compute.py  test_db.py  test_freshness.py  test_freshness_integration.py  test_main.py
