[project]
name = "taifx-volatility"
version = "0.1.0"
description = "台指平均震幅自動化分析網站"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "yfinance>=0.2.55",
    "pandas>=2.2",
    "psycopg2-binary>=2.9",
    "jinja2>=3.1",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-dotenv>=1.0",
    "pytz>=2024.1",
    "openpyxl>=3.1.5",
    "requests>=2.32",
    "exchange-calendars>=4.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"
markers = [
    "integration: tests that require real external services (exchange_calendars, PostgreSQL)",
]
